upd req.txt for Docker

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,38 +1,44 @@
 amqp==5.3.1
-asgiref==3.9.1
-billiard==4.2.1
+asgiref==3.10.0
+async-timeout==5.0.1
+billiard==4.2.2
+boto3==1.42.16
+botocore==1.42.16
 celery==5.5.3
-click==8.1.7
+click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
-colorama==0.4.6
-cron-descriptor==1.4.5
-Django==5.2.4
+cron_descriptor==2.0.6
+Django==4.2.25
 django-celery-beat==2.8.1
-django-cors-headers==4.7.0
+django-cors-headers==4.9.0
 django-redis==6.0.0
+django-storages==1.14.6
 django-timezone-field==7.1
-djangorestframework==3.16.0
-drf-yasg==1.21.10
+djangorestframework==3.16.1
+drf-yasg==1.21.11
 inflection==0.5.1
+jmespath==1.0.1
 kombu==5.5.4
-modeltranslation==0.25
 packaging==25.0
 pillow==11.3.0
-prompt_toolkit==3.0.51
-psycopg2-binary==2.9.10
+prompt_toolkit==3.0.52
+psycopg2-binary==2.9.11
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
+python-dotenv==1.2.1
 pytz==2025.2
-PyYAML==6.0.2
-redis==6.2.0
+PyYAML==6.0.3
+redis==7.0.1
+s3transfer==0.16.0
 six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.15.0
 tzdata==2025.2
 uritemplate==4.2.0
+urllib3==1.26.20
 vine==5.1.0
-wcwidth==0.2.13
-gunicorn>=21.2
-whitenoise>=6.6
+wcwidth==0.2.14
+whitenoise==6.11.0
+gunicorn>=21.2.0
