--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,9 @@ django-redis==6.0.0
 django-storages==1.14.6
 django-timezone-field==7.1
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
+gunicorn==23.0.0
 inflection==0.5.1
 jmespath==1.0.1
 kombu==5.5.4
@@ -25,6 +27,7 @@ packaging==25.0
 pillow==11.3.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
+PyJWT==2.10.1
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -41,4 +44,3 @@ urllib3==1.26.20
 vine==5.1.0
 wcwidth==0.2.14
 whitenoise==6.11.0
-gunicorn>=21.2.0
