prod ready settings:nginx + docker

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,5 +14,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-EXPOSE 5173
-CMD ["npm", "run", "preview", "--", "--host"]
+RUN mkdir -p /frontend && cp -r dist/* /frontend/
+# EXPOSE 5173
+# CMD ["npm", "run", "preview", "--", "--host"]
