--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,55 +1,140 @@
+# version: "3.9"
+
+# services:
+#   postgres:
+#     image: postgres:15
+#     container_name: postgres
+#     env_file:
+#       - .env
+#     volumes:
+#       - postgres_data:/var/lib/postgresql/data
+#     ports:
+#       - "5432:5432"
+
+#   redis:
+#     image: redis:7
+#     container_name: redis
+#     ports:
+#       - "6379:6379"
+
+#   backend:
+#     build: ./backend
+#     container_name: backend
+#     env_file:
+#       - .env
+#     depends_on:
+#       - postgres
+#       - redis
+#     ports:
+#       - "8000:8000"
+
+#   celery:
+#     build: ./backend
+#     container_name: celery
+#     command: celery -A config worker -l info
+#     env_file:
+#       - .env
+#     depends_on:
+#       - backend
+#       - redis
+#       - postgres
+
+#   frontend:
+#     build:
+#       context: ./frontend
+#       args:
+#         VITE_API_BASE_URL: ${VITE_API_BASE_URL}
+#         VITE_GEMINI_API_KEY: ${VITE_GEMINI_API_KEY}
+#     container_name: frontend
+#     ports:
+#       - "4173:4173"
+#     depends_on:
+#       - backend
+
+# volumes:
+#   postgres_data:
 version: "3.9"
 
 services:
   postgres:
     image: postgres:15
-    container_name: postgres
     env_file:
       - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    restart: always
 
   redis:
     image: redis:7
-    container_name: redis
-    ports:
-      - "6379:6379"
+    restart: always
 
   backend:
     build: ./backend
-    container_name: backend
     env_file:
       - .env
+    environment:
+      - TZ=Asia/Qyzylorda
     depends_on:
       - postgres
       - redis
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000
+    restart: always
 
   celery:
     build: ./backend
-    container_name: celery
-    command: celery -A config worker -l info
+    command: celery -A config worker -l info --concurrency=1
+    environment:
+      - TZ=Asia/Qyzylorda
     env_file:
       - .env
     depends_on:
       - backend
       - redis
       - postgres
+    restart: always
+  
+  celery-beat:
+    build: ./backend
+    command: celery -A config beat -l info
+    environment:
+      - TZ:Asia/Qyzylorda
+    env_file:
+      - .env
+    depends_on:
+      - backend
+      - redis
+      - postgres
+    restart: always
 
   frontend:
     build:
       context: ./frontend
       args:
-        VITE_API_BASE_URL: ${VITE_API_BASE_URL}
+        VITE_API_BASE_URL: /api/v1
         VITE_GEMINI_API_KEY: ${VITE_GEMINI_API_KEY}
-    container_name: frontend
+    volumes:
+      - frontend_dist:/frontend
+    restart: "no"
+
+  nginx:
+    image: nginx:alpine
     ports:
-      - "4173:4173"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - static_volume:/staticfiles
+      - frontend_dist:/var/www/frontend
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - backend
+      - frontend
+    restart: always
 
 volumes:
   postgres_data:
+  frontend_dist:
+  static_volume:
+  
