--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -83,7 +83,9 @@ http {
         ##################################################
         # FRONTEND (SPA)
         ##################################################
-        root /var/www/frontend;
+        #root /var/www/frontend;
+
+        root /usr/share/nginx/html;
         index index.html;
 
         location / {
