--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -193,7 +193,13 @@ services:
     restart: always
 
   nginx:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+      args:
+        VITE_API_BASE_URL: ${VITE_API_BASE_URL}
+        VITE_GEMINI_API_KEY: ${VITE_GEMINI_API_KEY}
+
     ports:
       - "80:80"
       - "443:443"
@@ -204,6 +210,7 @@ services:
     depends_on:
       - backend
     restart: always
+
 
 volumes:
   postgres_data:
