--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -193,13 +193,7 @@ services:
     restart: always
 
   nginx:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-      args:
-        VITE_API_BASE_URL: ${VITE_API_BASE_URL}
-        VITE_GEMINI_API_KEY: ${VITE_GEMINI_API_KEY}
-
+    image: nginx:alpine  # ТОЛЬКО image
     ports:
       - "80:80"
       - "443:443"
