--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ billiard==4.2.2
 boto3==1.42.16
 botocore==1.42.16
 celery==5.5.3
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1.2
@@ -20,6 +22,7 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.11
 gunicorn==23.0.0
+idna==3.11
 inflection==0.5.1
 jmespath==1.0.1
 kombu==5.5.4
@@ -34,6 +37,7 @@ python-dotenv==1.2.1
 pytz==2025.2
 PyYAML==6.0.3
 redis==7.0.1
+requests==2.32.5
 s3transfer==0.16.0
 six==1.17.0
 sqlparse==0.5.3
