--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
 
     sendfile on;
     keepalive_timeout 65;
-
+    client_max_body_size 20M;
     upstream django {
         server backend:8000;
     }
